--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="tab-body">
                 <div class="tab-body__content active">контент 1</div>
-                <div class="tab-body__content" style="background-color: blue">контент 2</div>
+                <div class="tab-body__content" style="background-color: rgb(0, 255, 38)">контент 2</div>
                 <div class="tab-body__content" style="background-color: teal">контент 3</div>
                 <div class="tab-body__content" style="background-color: crimson">контент 4</div>
             </div>
